Implement endpoint to get highscores for user
TG-156 #closed
