# app/routes/user-routes.js
@@ -7,6 +7,7 @@ const Ctrl = require('../controllers/user-controller');
 router.get('/', Ctrl.findAll)
     .get('/:username', Ctrl.findOne)
     .put('/:username', Ctrl.change)
+    .get('/:username/highscores', Ctrl.findHighscores)
     .put('/:username/password', Ctrl.changePassword)
     .put('/:username/thingy', Ctrl.changeFavoriteThingy);
 
